projects.css
/*
*{ 
  border: 1px solid red;
}
*/
hr{
  height: 1px;
  background-color: #000000;
  border: none;
}
html {
    overflow: scroll;
    overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 0px;  /* Remove scrollbar space */
    background: transparent;  /* Optional: just make scrollbar invisible */
}
/* Optional: show position indicator in red */
::-webkit-scrollbar-thumb {
    background: #FF0000;
}

body{
  margin-bottom: 200px;
  background: linear-gradient(to bottom,  #4B0082, #87CEEB);
  /*background: linear-gradient(to bottom, #FFE4E1, #87CEEB); light pink to light blue*/

}

.nav-link {
    color: #FFFAF0;
    font-weight: 700;
}
.nav{
    font-family: 'Raleway', sans-serif;
    position: absolute;
    text-align: right;
    line-height: 50px;
    right: 15px;
    z-index:1; 
    margin-top: -100px;

}
.nav li {
    display: none;
    list-style-type: none;

}

@keyframes fadein {
  0% {
    opacity: 0.0;
  }
  100% {
    opacity: 1.0;
  }
}

#projectsTitle{
    color:white;

  font-family: 'Raleway', sans-serif;
	position: relative;
  margin-left: 45%;
  /*font-size: 60px;*/
  font-size:400%;
  margin-top: 100px;
  animation: type 1.5s;
  overflow:hidden;
  white-space: nowrap;
  /*border-right: 4px solid black;*/

}
@keyframes type{
    0%{
        width: 0ch;
    }
    100%{
        width: 8ch;
    }
}

#projectsPara{
    color:white;

    font-family: 'Raleway', sans-serif;
    position: absolute;
    text-align: center;
    left: 14%;
    font-size: 20px;
    top: 190px;

    animation: T 3s steps(115);
    opacity: 0;
    overflow: hidden;
    white-space: nowrap;
    border-right: 2px solid white;
    animation-delay: 1s;
    animation-fill-mode: forwards;

}

@keyframes T{
  0%{
    opacity: 1;
    width: 0ch;
  }
  100%{
    opacity: 1;
    width:84.4ch;
  }
}


.image{
  height: 250px;
  width: 250px;
  display: block;
}




.images{
	position: relative;
	margin-top: 150px;
  display: flex;
 	justify-content: space-between;
 	margin-right: 50px;
 	margin-left: 50px;
}


.webifyContainer {
  position: relative;
  width: 20%;
}
.droneContainer {
  position: relative;
  width: 20%;
}
.latexContainer {
  position: relative;
  width: 20%;
}

.minimaxContainer{
  position: relative;
  width: 20%;
}


.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0s ease;
  background-color: #202020;
}

.webifyContainer:hover .overlay {
  opacity: 0.9;
}
.droneContainer:hover .overlay {
  opacity: 0.9;
}
.latexContainer:hover .overlay {
  opacity: 0.9;
}
.minimaxContainer:hover .overlay {
  opacity: 0.9;
}
.link{
  color: #6495ED;
}
.text {
  font-family: 'Raleway', sans-serif;

  /*
  width:250px;
  height:250px;
  */
  width: 90%;
  color: white;
  /*
  font-size: 17px;
  */
  font-size: 1vw;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;

}


.drop {
  
  position: absolute;
  bottom: 100%;
  width: 15px;
  height: 120px;
  pointer-events: none;
  animation: drop 0.5s linear infinite;
}

@keyframes drop {
  0% {
    transform: translateY(0vh);
  }
  75% {
    transform: translateY(90vh);
  }
  100% {
    transform: translateY(90vh);
  }
}

.stem {
  width: 1px;
  height: 60%;
  margin-left: 7px;
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
  animation: stem 0.5s linear infinite;
}

@keyframes stem {
  0% {
    opacity: 1;
  }
  65% {
    opacity: 1;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

